# vid-themer

./: .gitignore  AGENTS.md  CODE_REVIEW_FIXES.md  Cargo.toml  Dockerfile  README.md  crontab  docker-compose.sample.yml  entrypoint.sh
.github/workflows/: main.yml
.kiro/hooks/: code-quality-analyzer.kiro.hook  senior-code-review.kiro.hook
.kiro/specs/action-based-clip-selection/: design.md  requirements.md  tasks.md
.kiro/specs/ffmpeg-code-quality-improvements/: design.md  requirements.md  tasks.md
.kiro/specs/multiple-clips-per-video/: design.md  requirements.md  tasks.md
.kiro/specs/video-clip-extractor/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
proptest-regressions/: cli.txt  ffmpeg.txt  processor.txt  scanner.txt  selector.txt
src/: cli.rs  cli_tests.rs  error.rs  ffmpeg.rs  logger.rs  main.rs  main_tests.rs  processor.rs  progress.rs  progress_tests.rs  scanner.rs  scanner_tests.rs  selector.rs  selector_tests.rs
src/ffmpeg/: analysis.rs  command_builder.rs  constants.rs  error.rs  executor.rs  metadata.rs  mod.rs
tests/: error_recovery.rs  full_pipeline.rs  incremental_clip_generation.rs  integration_test.rs  multiple_clips_pipeline.rs  test_zero_byte_regeneration.rs  zero_byte_regeneration.rs
tests/common/: mod.rs
