[package]
name = "video-clip-extractor"
version = "1.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
rand = "0.8"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
rayon = "1.8"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = "0.4"

[dev-dependencies]
proptest = "1.5"

[features]
# Feature flag for expensive integration tests that require FFmpeg
integration-ffmpeg = []

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
