[package]
name = "video-clip-extractor"
version = "1.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0"
rand = "0.10.1"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.1"
chrono = "0.4"

[dev-dependencies]
proptest = "1.11"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
